# transcript-polish

./: .gitignore  README.md  pyproject.toml
docs/: INSTALL.md  SDD-CR-001-integrated-pipeline-readiness.md  SDD-CR-001-media2md-consumer-contract.md  SDD-CR-integrated-pipeline-readiness.md  SDD-shared-runtime-refactor.md  SDD-subtitle-translate.md  SDD-transcript-polish.md
reference/: local-llm-inference-stack.md
scripts/: configure_default_mode.py  install.py  install.sh  uninstall.py  uninstall.sh
src/transcript_polish/: cli.py  entrypoint.py  generation.py  user_config.py
tests/: test_cli_preflight.py  test_modes.py  test_output_paths.py  test_prompt_behavior.py  test_repair_validation.py  test_replacements.py  test_response_cleaning.py  test_truncation.py
