[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-polish"
version = "0.1.0"
description = "Polish raw transcripts into Traditional Chinese Markdown with local LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.57.0",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
quantization = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.0",
]

[project.scripts]
transcript-polish = "transcript_polish.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
