# 此區塊定義專案打包與建置時使用的 PEP 517 設定。
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# 此區塊提供套件工具與安裝流程使用的專案中繼資料。
[project]
name = "transcript-polish"
version = "0.2.0"
description = "Polish raw transcripts into Traditional Chinese Markdown with local LLMs."
readme = "README.md"
requires-python = ">=3.10"
# 這裡只列出所有執行模式都需要的核心套件。
dependencies = [
    "transformers>=4.57.0",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
# 4-bit 量化模式才需要的套件。
quantization = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.0",
]
# 開發與測試才需要的套件。
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
# 安裝後會提供 `transcript-polish` 指令入口。
transcript-polish = "transcript_polish.cli:main"

[tool.setuptools]
# 專案採用 `src/` 目錄布局來放置可匯入的套件程式碼。
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# 互動式安裝程式會讀取這些設定；optional 套件內容仍以
# [project.optional-dependencies] 為唯一來源。
[tool.transcript-polish.installer]
command = "transcript-polish"
venv-dir = "~/.venvs/transcript-polish"
bin-dir = "~/bin"
torch-requirement = "torch"

[tool.transcript-polish.installer.optional-groups.quantization]
description = "安裝 4-bit 量化支援，供 Qwen2.5-7B-Instruct 等較大模型使用。"
default = true

[tool.transcript-polish.installer.optional-groups.dev]
description = "安裝 pytest，供修改程式與執行回歸測試使用。"
default = false
